--- a/hosting/main.css
+++ b/hosting/main.css
@@ -1,3 +1,7 @@
+*:before, *:after {
+    box-sizing: border-box;
+}
+
 html, body {
 	margin: 0;
 	height: 100%;
@@ -89,4 +93,80 @@ a {
 
 .list {
 	color: rgba(255, 255, 255, .7);
+}
+
+.btn-container {
+	margin: 0 auto 74px;
+	width: 360px;
+}
+
+.btn-container .btn {
+	padding: 0;
+	height: 60px;
+	width: 176px;
+	border-radius: 4px;
+	border: 0px solid #fff;
+
+	margin: 0 10px;
+	float: left;
+	cursor: pointer;
+}
+
+.btn-container .btn:first-child {
+	margin: 0 4px 0 0;
+}
+
+.btn-container .btn:last-child {
+	margin: 0 0 0 4px;
+}
+
+.btn-container .btn span {
+	display: block;
+	float: left;
+}
+
+.btn-container .btn .label {
+	line-height: 60px;
+	color: #fff;
+	width: 122px;
+	font-size: 13px;
+}
+
+.btn-container .btn .brand {
+	width: 48px;
+	height: 60px;
+	background: rgba(255, 255, 255, 0.1);
+}
+
+.btn-container .btn .brand .icon {
+	margin: 18px 12px;
+	width: 24px;
+	height: 24px;
+	display: block;
+}
+
+.btn-container .btn .brand .icon-github {
+	background: url('icon-github-white.png') no-repeat;
+	background-size: 24px 24px;
+}
+
+.btn-container .btn .brand .icon-google {
+	background: url('icon-google-white.png') no-repeat;
+	background-size: 24px 24px;
+}
+
+.btn-container .btn.btn-google {
+	background: #4285f4;
+}
+
+.btn-container .btn.btn-google:hover {
+	background: rgba(66,133,244, 0.8);
+}
+
+.btn-container .btn.btn-github {
+	background: rgba(255,255,255, 0.4);
+}
+
+.btn-container .btn.btn-github:hover {
+	background: rgba(255,255,255, 0.2);
 }
